--- a/assets/style.css
+++ b/assets/style.css
@@ -67,6 +67,10 @@ footer {
 footer a {
   text-decoration: none;
   color: #fff;
+  -webkit-transition: 0.3s ease-in-out;
+      -ms-transition: 0.3s ease-in-out;
+       -o-transition: 0.3s ease-in-out;
+          transition: 0.3s ease-in-out;
 }
 
 footer a:hover {
